Add device connections
